# testTask-upshell

./: .gitignore  Makefile  README.md  dev.sh  new.txt  new2.txt  pyproject.toml  tt.txt
model/: model.joblib  scaler.joblib
src/: config.py  dependencies.py  main.py
src/adaptors/: bar_service.py  upshel_api.py
src/adaptors/stubs/: fake_api.py
src/cmd/rest/: bar.py
src/cmdpy/rest/: bar.py
src/core/domain/: bar.py  forecast.py
src/core/ports/: bar_service.py  bit_api.py  errors.py
src/entrypoints/rest/: __init__.py  bar.py
tests/: conftest.py
tests/test_unit/: aggr_test.py
