[tool.poetry]
name = "test-task-3"
version = "0.1.0"
description = ""
authors = ["SosisterRapStar <timoshenkovvanya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
aiohttp = "^3.11.18"
python-dotenv = "^1.1.0"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
ruff = "^0.11.6"
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
